human proteome data

--- a/spearmint_ghsom.ipynb
+++ b/spearmint_ghsom.ipynb
@@ -92,7 +92,7 @@
     "            update_weights(x, network, win_neuron, eta, sigma)\n",
     "            \n",
     "        # drop neighbourhood\n",
-    "        sigma = sigma_0 * np.exp(-2 * sigma_0 * e / num_epochs);\n",
+    "#         sigma = sigma_0 * np.exp(-2 * sigma_0 * e / num_epochs);\n",
     "\n",
     "# winning neuron\n",
     "def winning_neuron(x, network):\n",
