fiddling with R -- not going well

--- a/topGO_own_data.ipynb
+++ b/topGO_own_data.ipynb
@@ -85,6 +85,201 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>'DEFINITION'</li>\n",
+       "\t<li>'GOID'</li>\n",
+       "\t<li>'ONTOLOGY'</li>\n",
+       "\t<li>'TERM'</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'DEFINITION'\n",
+       "\\item 'GOID'\n",
+       "\\item 'ONTOLOGY'\n",
+       "\\item 'TERM'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'DEFINITION'\n",
+       "2. 'GOID'\n",
+       "3. 'ONTOLOGY'\n",
+       "4. 'TERM'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] \"DEFINITION\" \"GOID\"       \"ONTOLOGY\"   \"TERM\"      "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "columns(GO.db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "keys <- sample(keys(GO.db), 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>'GO:1901622'</li>\n",
+       "\t<li>'GO:1900823'</li>\n",
+       "\t<li>'GO:0000222'</li>\n",
+       "\t<li>'GO:2000701'</li>\n",
+       "\t<li>'GO:1901308'</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'GO:1901622'\n",
+       "\\item 'GO:1900823'\n",
+       "\\item 'GO:0000222'\n",
+       "\\item 'GO:2000701'\n",
+       "\\item 'GO:1901308'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'GO:1901622'\n",
+       "2. 'GO:1900823'\n",
+       "3. 'GO:0000222'\n",
+       "4. 'GO:2000701'\n",
+       "5. 'GO:1901308'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] \"GO:1901622\" \"GO:1900823\" \"GO:0000222\" \"GO:2000701\" \"GO:1901308\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "keys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "?sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'select()' returned 1:1 mapping between keys and columns\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th scope=col>GOID</th><th scope=col>TERM</th><th scope=col>DEFINITION</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>GO:1901622                                                                                                                                                                                                                               </td><td>positive regulation of smoothened signaling pathway involved in dorsal/ventral neural tube patterning                                                                                                                                    </td><td>Any process that activates or increases the frequency, rate or extent of smoothened signaling pathway involved in dorsal/ventral neural tube patterning.                                                                                 </td></tr>\n",
+       "\t<tr><td>GO:1900823                                                                                                                                                                                                                               </td><td>negative regulation of ergot alkaloid biosynthetic process                                                                                                                                                                               </td><td>Any process that stops, prevents or reduces the frequency, rate or extent of ergot alkaloid biosynthetic process.                                                                                                                        </td></tr>\n",
+       "\t<tr><td>GO:0000222                                                                                                                                                                                                                               </td><td>plasma membrane proton-transporting V-type ATPase, V0 domain                                                                                                                                                                             </td><td>The V0 domain of a proton-transporting V-type ATPase found in the plasma membrane.                                                                                                                                                       </td></tr>\n",
+       "\t<tr><td>GO:2000701                                                                                                                                                                                                                               </td><td>glial cell-derived neurotrophic factor receptor signaling pathway involved in ureteric bud formation                                                                                                                                     </td><td>The series of molecular signals generated as a consequence of a glial cell-derived neurotrophic factor receptor binding to one of its physiological ligands that contributes to the formation of the ureteric bud from the Wolffian duct.</td></tr>\n",
+       "\t<tr><td>GO:1901308                                                                                                                                                                                                                               </td><td>regulation of sterol regulatory element binding protein cleavage                                                                                                                                                                         </td><td>Any process that modulates the frequency, rate or extent of sterol regulatory element binding protein cleavage.                                                                                                                          </td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|lll}\n",
+       " GOID & TERM & DEFINITION\\\\\n",
+       "\\hline\n",
+       "\t GO:1901622                                                                                                                                                                                                                                & positive regulation of smoothened signaling pathway involved in dorsal/ventral neural tube patterning                                                                                                                                     & Any process that activates or increases the frequency, rate or extent of smoothened signaling pathway involved in dorsal/ventral neural tube patterning.                                                                                 \\\\\n",
+       "\t GO:1900823                                                                                                                                                                                                                                & negative regulation of ergot alkaloid biosynthetic process                                                                                                                                                                                & Any process that stops, prevents or reduces the frequency, rate or extent of ergot alkaloid biosynthetic process.                                                                                                                        \\\\\n",
+       "\t GO:0000222                                                                                                                                                                                                                                & plasma membrane proton-transporting V-type ATPase, V0 domain                                                                                                                                                                              & The V0 domain of a proton-transporting V-type ATPase found in the plasma membrane.                                                                                                                                                       \\\\\n",
+       "\t GO:2000701                                                                                                                                                                                                                                & glial cell-derived neurotrophic factor receptor signaling pathway involved in ureteric bud formation                                                                                                                                      & The series of molecular signals generated as a consequence of a glial cell-derived neurotrophic factor receptor binding to one of its physiological ligands that contributes to the formation of the ureteric bud from the Wolffian duct.\\\\\n",
+       "\t GO:1901308                                                                                                                                                                                                                                & regulation of sterol regulatory element binding protein cleavage                                                                                                                                                                          & Any process that modulates the frequency, rate or extent of sterol regulatory element binding protein cleavage.                                                                                                                          \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "GOID | TERM | DEFINITION | \n",
+       "|---|---|---|---|---|\n",
+       "| GO:1901622                                                                                                                                                                                                                                | positive regulation of smoothened signaling pathway involved in dorsal/ventral neural tube patterning                                                                                                                                     | Any process that activates or increases the frequency, rate or extent of smoothened signaling pathway involved in dorsal/ventral neural tube patterning.                                                                                  | \n",
+       "| GO:1900823                                                                                                                                                                                                                                | negative regulation of ergot alkaloid biosynthetic process                                                                                                                                                                                | Any process that stops, prevents or reduces the frequency, rate or extent of ergot alkaloid biosynthetic process.                                                                                                                         | \n",
+       "| GO:0000222                                                                                                                                                                                                                                | plasma membrane proton-transporting V-type ATPase, V0 domain                                                                                                                                                                              | The V0 domain of a proton-transporting V-type ATPase found in the plasma membrane.                                                                                                                                                        | \n",
+       "| GO:2000701                                                                                                                                                                                                                                | glial cell-derived neurotrophic factor receptor signaling pathway involved in ureteric bud formation                                                                                                                                      | The series of molecular signals generated as a consequence of a glial cell-derived neurotrophic factor receptor binding to one of its physiological ligands that contributes to the formation of the ureteric bud from the Wolffian duct. | \n",
+       "| GO:1901308                                                                                                                                                                                                                                | regulation of sterol regulatory element binding protein cleavage                                                                                                                                                                          | Any process that modulates the frequency, rate or extent of sterol regulatory element binding protein cleavage.                                                                                                                           | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  GOID      \n",
+       "1 GO:1901622\n",
+       "2 GO:1900823\n",
+       "3 GO:0000222\n",
+       "4 GO:2000701\n",
+       "5 GO:1901308\n",
+       "  TERM                                                                                                 \n",
+       "1 positive regulation of smoothened signaling pathway involved in dorsal/ventral neural tube patterning\n",
+       "2 negative regulation of ergot alkaloid biosynthetic process                                           \n",
+       "3 plasma membrane proton-transporting V-type ATPase, V0 domain                                         \n",
+       "4 glial cell-derived neurotrophic factor receptor signaling pathway involved in ureteric bud formation \n",
+       "5 regulation of sterol regulatory element binding protein cleavage                                     \n",
+       "  DEFINITION                                                                                                                                                                                                                               \n",
+       "1 Any process that activates or increases the frequency, rate or extent of smoothened signaling pathway involved in dorsal/ventral neural tube patterning.                                                                                 \n",
+       "2 Any process that stops, prevents or reduces the frequency, rate or extent of ergot alkaloid biosynthetic process.                                                                                                                        \n",
+       "3 The V0 domain of a proton-transporting V-type ATPase found in the plasma membrane.                                                                                                                                                       \n",
+       "4 The series of molecular signals generated as a consequence of a glial cell-derived neurotrophic factor receptor binding to one of its physiological ligands that contributes to the formation of the ureteric bud from the Wolffian duct.\n",
+       "5 Any process that modulates the frequency, rate or extent of sterol regulatory element binding protein cleavage.                                                                                                                          "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "select(GO.db, keys=keys, keytype=\"GOID\", columns=c(\"TERM\", \"DEFINITION\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "collapsed": false
