--- a/yeast.ipynb
+++ b/yeast.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -98,38 +98,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'ghsom_main' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-3270347d82e8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mG\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmap\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mghsom_main\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'embedded_hi_ii_14.gml'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m'number of communities detected: {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'ghsom_main' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of communities detected: 29\n",
+      "done\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "G, map = ghsom_main(params, 'embedded_hi_ii_14.gml')\n",
+    "# G, map = ghsom_main(params, 'embedded_hi_ii_14.gml')\n",
+    "G, map = ghsom_main(params, 'embedded_yeast_union.gml')\n",
     "\n",
     "print 'number of communities detected: {}'.format(len(map))\n",
-    "save_obj((G, map), 'HI_II_communities_{}'.format(p))\n",
+    "# save_obj((G, map), 'HI_II_communities_{}'.format(p))\n",
+    "save_obj((G, map), 'yeast_union_communities_{}'.format(p))\n",
     "\n",
     "print 'done'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -138,7 +135,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "num communities: 35\n"
+      "num communities: 29\n"
      ]
     }
    ],
@@ -147,13 +144,14 @@
     "\n",
     "os.chdir(\"/home/david/Documents/ghsom\")\n",
     "\n",
-    "G, map = load_obj('HI_II_communities_{}'.format(p))\n",
+    "# G, map = load_obj('HI_II_communities_{}'.format(p))\n",
+    "G, map = load_obj('yeast_union_communities_{}'.format(p))\n",
     "print 'num communities: {}'.format(len(map))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -162,14 +160,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "removed node 2\n",
       "removed node 4\n",
-      "removed node 20\n",
-      "removed node 29\n",
-      "removed node 30\n",
-      "removed node 31\n",
-      "removed node 32\n",
-      "removed node 33\n",
-      "removed node 34\n"
+      "removed node 10\n",
+      "removed node 12\n",
+      "removed node 14\n",
+      "removed node 15\n",
+      "removed node 24\n",
+      "removed node 26\n"
      ]
     }
    ],
@@ -185,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -215,13 +213,7 @@
       "written community_17.txt\n",
       "written community_18.txt\n",
       "written community_19.txt\n",
-      "written community_20.txt\n",
-      "written community_21.txt\n",
-      "written community_22.txt\n",
-      "written community_23.txt\n",
-      "written community_24.txt\n",
-      "written community_25.txt\n",
-      "written community_26.txt\n"
+      "written community_20.txt\n"
      ]
     }
    ],
@@ -232,7 +224,7 @@
     "##save to communities directory\n",
     "os.chdir(\"/home/david/Documents/ghsom\")\n",
     "\n",
-    "dir_name = \"hi_communities_08\"\n",
+    "dir_name = \"union_communities_08\"\n",
     "\n",
     "if not os.path.isdir(dir_name):\n",
     "    os.mkdir(dir_name)\n",
