larger number of communities

--- a/topGO_R.ipynb
+++ b/topGO_R.ipynb
@@ -79,6 +79,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "0.8"
+      ],
+      "text/latex": [
+       "0.8"
+      ],
+      "text/markdown": [
+       "0.8"
+      ],
+      "text/plain": [
+       "[1] 0.8"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "a <- c(1,2,3,4,5,6,7,8,9)\n",
+    "b  <- c(3,2,1,2,2,3,4,6,7,8,9,0,1)\n",
+    "length(intersect(a, b)) / length(union(a, b))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 57,
    "metadata": {
     "collapsed": false
@@ -195,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -235,6 +267,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "inter <- function(x, y){\n",
+    "    return(length(intersect(x, y)) / length(union(x, y)))\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "0"
+      ],
+      "text/latex": [
+       "0"
+      ],
+      "text/markdown": [
+       "0"
+      ],
+      "text/plain": [
+       "[1] 0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "inter(g[[1]], g[[3]])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "collapsed": true
@@ -262,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "scrolled": true
