--- a/yeast.ipynb
+++ b/yeast.ipynb
@@ -65,9 +65,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -86,6 +86,7 @@
     "    \n",
     "os.chdir(\"/home/david/Documents/ghsom\")\n",
     "\n",
+    "init = 50\n",
     "p = 0.2\n",
     "\n",
     "#ghsom parameters\n",
@@ -93,51 +94,23 @@
     "         'eta': 0.0001,\n",
     "         'sigma': 1,\n",
     "          'e_sg': p,\n",
-    "         'e_en': 0.8}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-2f2f8308775d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# G, map = ghsom_main(params, 'embedded_hi_ii_14.gml')\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# G, map = ghsom_main(params, 'embedded_yeast_union.gml')\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mG\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmap\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mghsom_main\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'embedded_yeast_uetz.gml'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m'number of communities detected: {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/david/Documents/ghsom/spearmint_ghsom.pyc\u001b[0m in \u001b[0;36mmain_no_labels\u001b[0;34m(params, gml_filename, lam)\u001b[0m\n\u001b[1;32m    613\u001b[0m     \u001b[0;31m#run ghsom algorithm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    614\u001b[0m     network, MQE = ghsom(G, lam, params['w'], params['eta'],\n\u001b[0;32m--> 615\u001b[0;31m                          params['sigma'], float(\"inf\"), params['e_sg'], params['e_en'], layer)\n\u001b[0m\u001b[1;32m    616\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    617\u001b[0m     \u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0md\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnetwork\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnodes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/david/Documents/ghsom/spearmint_ghsom.pyc\u001b[0m in \u001b[0;36mghsom\u001b[0;34m(G, lam, w, eta, sigma, e_0, e_sg, e_en, layer)\u001b[0m\n\u001b[1;32m    456\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    457\u001b[0m             \u001b[0;31m#recursively run algorithm to create new network for subgraph of this neurons nodes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 458\u001b[0;31m             \u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0me\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mghsom\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlam\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mw\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0meta\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msigma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0me_0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0me_sg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0me_en\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlayer\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    459\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    460\u001b[0m             \u001b[0;31m#repack\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/david/Documents/ghsom/spearmint_ghsom.pyc\u001b[0m in \u001b[0;36mghsom\u001b[0;34m(G, lam, w, eta, sigma, e_0, e_sg, e_en, layer)\u001b[0m\n\u001b[1;32m    456\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    457\u001b[0m             \u001b[0;31m#recursively run algorithm to create new network for subgraph of this neurons nodes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 458\u001b[0;31m             \u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0me\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mghsom\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlam\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mw\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0meta\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msigma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0me_0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0me_sg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0me_en\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlayer\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    459\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    460\u001b[0m             \u001b[0;31m#repack\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/david/Documents/ghsom/spearmint_ghsom.pyc\u001b[0m in \u001b[0;36mghsom\u001b[0;34m(G, lam, w, eta, sigma, e_0, e_sg, e_en, layer)\u001b[0m\n\u001b[1;32m    427\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    428\u001b[0m         \u001b[0;31m#train for l epochs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 429\u001b[0;31m         \u001b[0mtrain_network\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnetwork\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlam\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0meta\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msigma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mN\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    430\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    431\u001b[0m         \u001b[0;31m#classify nodes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/david/Documents/ghsom/spearmint_ghsom.pyc\u001b[0m in \u001b[0;36mtrain_network\u001b[0;34m(X, network, num_epochs, eta_0, sigma_0, N)\u001b[0m\n\u001b[1;32m     79\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     80\u001b[0m             \u001b[0;31m#determine winning neuron\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 81\u001b[0;31m             \u001b[0mwin_neuron\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwinning_neuron\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnetwork\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     82\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     83\u001b[0m             \u001b[0;31m# update weights\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/david/Documents/ghsom/spearmint_ghsom.pyc\u001b[0m in \u001b[0;36mwinning_neuron\u001b[0;34m(x, network)\u001b[0m\n\u001b[1;32m    101\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    102\u001b[0m         \u001b[0;31m#distance between input vector and neuron weight\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 103\u001b[0;31m         \u001b[0mdistance\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    104\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    105\u001b[0m         \u001b[0;31m# if we have a new closest neuron\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
+    "         'e_en': 0.8}\n",
+    "\n",
     "# G, map = ghsom_main(params, 'embedded_hi_ii_14.gml')\n",
     "# G, map = ghsom_main(params, 'embedded_yeast_union.gml')\n",
-    "G, map = ghsom_main(params, 'embedded_yeast_uetz.gml')\n",
+    "G, map = ghsom_main(params, 'embedded_yeast_uetz.gml', init=init, lam=10000)\n",
     "\n",
     "print 'number of communities detected: {}'.format(len(map))\n",
     "# save_obj((G, map), 'HI_II_communities_{}'.format(p))\n",
     "# save_obj((G, map), 'yeast_union_communities_{}'.format(p))\n",
-    "save_obj((G, map), 'yeast_uetz_communities_{}'.format(p))\n",
+    "save_obj((G, map), 'yeast_uetz_communities_{}_{}'.format(p, init))\n",
     "\n",
     "print 'done'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -146,7 +119,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "num communities: 21\n"
+      "num communities: 50\n"
      ]
     }
    ],
@@ -157,19 +130,32 @@
     "\n",
     "# G, map = load_obj('HI_II_communities_{}'.format(p))\n",
     "# G, map = load_obj('yeast_union_communities_{}'.format(p))\n",
-    "G, map = load_obj('yeast_uetz_communities_{}'.format(p))\n",
+    "G, map = load_obj('yeast_uetz_communities_{}_{}'.format(p, init))\n",
     "print 'num communities: {}'.format(len(map))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "removed node 19\n",
+      "removed node 36\n",
+      "removed node 45\n",
+      "removed node 47\n",
+      "removed node 48\n",
+      "removed node 49\n"
+     ]
+    }
+   ],
    "source": [
-    "min_nodes = 10\n",
+    "min_nodes = 1\n",
     "\n",
     "##remove neurons with no assigned nodes\n",
     "for n, d in map.nodes(data=True):\n",
@@ -180,15 +166,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "44"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "made directory uetz_communities_0.2_50\n",
       "written shortest path matrix\n",
       "written community_0.txt\n",
       "written community_1.txt\n",
@@ -197,7 +207,43 @@
       "written community_4.txt\n",
       "written community_5.txt\n",
       "written community_6.txt\n",
-      "written community_7.txt\n"
+      "written community_7.txt\n",
+      "written community_8.txt\n",
+      "written community_9.txt\n",
+      "written community_10.txt\n",
+      "written community_11.txt\n",
+      "written community_12.txt\n",
+      "written community_13.txt\n",
+      "written community_14.txt\n",
+      "written community_15.txt\n",
+      "written community_16.txt\n",
+      "written community_17.txt\n",
+      "written community_18.txt\n",
+      "written community_19.txt\n",
+      "written community_20.txt\n",
+      "written community_21.txt\n",
+      "written community_22.txt\n",
+      "written community_23.txt\n",
+      "written community_24.txt\n",
+      "written community_25.txt\n",
+      "written community_26.txt\n",
+      "written community_27.txt\n",
+      "written community_28.txt\n",
+      "written community_29.txt\n",
+      "written community_30.txt\n",
+      "written community_31.txt\n",
+      "written community_32.txt\n",
+      "written community_33.txt\n",
+      "written community_34.txt\n",
+      "written community_35.txt\n",
+      "written community_36.txt\n",
+      "written community_37.txt\n",
+      "written community_38.txt\n",
+      "written community_39.txt\n",
+      "written community_40.txt\n",
+      "written community_41.txt\n",
+      "written community_42.txt\n",
+      "written community_43.txt\n"
      ]
     }
    ],
@@ -209,7 +255,7 @@
     "os.chdir(\"/home/david/Documents/ghsom\")\n",
     "\n",
     "# dir_name = \"union_communities_08\"\n",
-    "dir_name = \"uetz_communities_04\"\n",
+    "dir_name = \"uetz_communities_{}_{}\".format(p, init)\n",
     "\n",
     "if not os.path.isdir(dir_name):\n",
     "    os.mkdir(dir_name)\n",
@@ -230,15 +276,6 @@
     "    print 'written community_{}.txt'.format(c)\n",
     "    c += 1"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
