--- a/yeast.ipynb
+++ b/yeast.ipynb
@@ -65,11 +65,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training epoch: 9999/10000number of communities detected: 60\n",
+      "done\n"
+     ]
+    }
+   ],
    "source": [
     "from spearmint_ghsom import main_no_labels as ghsom_main\n",
     "import pickle\n",
@@ -94,11 +103,11 @@
     "         'eta': 0.001,\n",
     "         'sigma': 1,\n",
     "          'e_sg': p,\n",
-    "         'e_en': 0.8}\n",
+    "         'e_en': 10}\n",
     "\n",
     "# G, map = ghsom_main(params, 'embedded_hi_ii_14.gml')\n",
     "# G, map = ghsom_main(params, 'embedded_yeast_union.gml')\n",
-    "G, map = ghsom_main(params, 'embedded_yeast_uetz.gml', init=init, lam=50000)\n",
+    "G, map = ghsom_main(params, 'embedded_yeast_uetz.gml', init=init, lam=10000)\n",
     "\n",
     "print 'number of communities detected: {}'.format(len(map))\n",
     "# save_obj((G, map), 'HI_II_communities_{}'.format(p))\n",
@@ -110,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -119,7 +128,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "num communities: 30\n"
+      "num communities: 60\n"
      ]
     }
    ],
@@ -136,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -146,20 +155,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "removed node 4\n",
-      "removed node 6\n",
-      "removed node 8\n",
+      "removed node 1\n",
+      "removed node 2\n",
+      "removed node 3\n",
+      "removed node 5\n",
+      "removed node 7\n",
       "removed node 10\n",
-      "removed node 11\n",
-      "removed node 12\n",
-      "removed node 13\n",
+      "removed node 14\n",
+      "removed node 17\n",
+      "removed node 19\n",
+      "removed node 23\n",
+      "removed node 24\n",
       "removed node 26\n",
-      "removed node 29\n"
+      "removed node 28\n",
+      "removed node 29\n",
+      "removed node 31\n",
+      "removed node 32\n",
+      "removed node 33\n",
+      "removed node 36\n",
+      "removed node 38\n",
+      "removed node 41\n",
+      "removed node 43\n",
+      "removed node 44\n",
+      "removed node 46\n",
+      "removed node 47\n",
+      "removed node 50\n",
+      "removed node 53\n",
+      "removed node 56\n"
      ]
     }
    ],
    "source": [
-    "min_nodes = 5\n",
+    "min_nodes = 3\n",
     "\n",
     "##remove neurons with no assigned nodes\n",
     "for n, d in map.nodes(data=True):\n",
@@ -170,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -178,10 +205,10 @@
     {
      "data": {
       "text/plain": [
-       "21"
+       "33"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -202,7 +229,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "made directory uetz_communities_0.3_30\n",
+      "made directory uetz_communities_1.0_60\n",
       "written shortest path matrix\n",
       "written community_0.txt\n",
       "written community_1.txt\n",
@@ -224,7 +251,19 @@
       "written community_17.txt\n",
       "written community_18.txt\n",
       "written community_19.txt\n",
-      "written community_20.txt\n"
+      "written community_20.txt\n",
+      "written community_21.txt\n",
+      "written community_22.txt\n",
+      "written community_23.txt\n",
+      "written community_24.txt\n",
+      "written community_25.txt\n",
+      "written community_26.txt\n",
+      "written community_27.txt\n",
+      "written community_28.txt\n",
+      "written community_29.txt\n",
+      "written community_30.txt\n",
+      "written community_31.txt\n",
+      "written community_32.txt\n"
      ]
     }
    ],
