--- a/yeast.ipynb
+++ b/yeast.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -74,8 +74,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training epoch: 9999/10000number of communities detected: 60\n",
-      "done\n"
+      "Layer: 1, training epoch: 289/1000, size of map: 17, MQE: 2.04717910262, target: 0.815569144912          "
      ]
     }
    ],
@@ -95,8 +94,8 @@
     "    \n",
     "os.chdir(\"/home/david/Documents/ghsom\")\n",
     "\n",
-    "init = 60\n",
-    "p = 1.0\n",
+    "init = 1\n",
+    "p = 0.1\n",
     "\n",
     "#ghsom parameters\n",
     "params = {'w': 0.0001,\n",
@@ -107,9 +106,9 @@
     "\n",
     "# G, map = ghsom_main(params, 'embedded_hi_ii_14.gml')\n",
     "# G, map = ghsom_main(params, 'embedded_yeast_union.gml')\n",
-    "G, map = ghsom_main(params, 'embedded_yeast_uetz.gml', init=init, lam=10000)\n",
+    "G, map = ghsom_main(params, 'embedded_yeast_uetz.gml', init=init, lam=1000)\n",
     "\n",
-    "print 'number of communities detected: {}'.format(len(map))\n",
+    "print '\\nnumber of communities detected: {}'.format(len(map))\n",
     "# save_obj((G, map), 'HI_II_communities_{}'.format(p))\n",
     "# save_obj((G, map), 'yeast_union_communities_{}'.format(p))\n",
     "save_obj((G, map), 'yeast_uetz_communities_{}_{}'.format(p, init))\n",
@@ -119,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -128,7 +127,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "num communities: 60\n"
+      "num communities: 13\n"
      ]
     }
    ],
@@ -145,48 +144,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "removed node 1\n",
-      "removed node 2\n",
-      "removed node 3\n",
-      "removed node 5\n",
-      "removed node 7\n",
-      "removed node 10\n",
-      "removed node 14\n",
-      "removed node 17\n",
-      "removed node 19\n",
-      "removed node 23\n",
-      "removed node 24\n",
-      "removed node 26\n",
-      "removed node 28\n",
-      "removed node 29\n",
-      "removed node 31\n",
-      "removed node 32\n",
-      "removed node 33\n",
-      "removed node 36\n",
-      "removed node 38\n",
-      "removed node 41\n",
-      "removed node 43\n",
-      "removed node 44\n",
-      "removed node 46\n",
-      "removed node 47\n",
-      "removed node 50\n",
-      "removed node 53\n",
-      "removed node 56\n"
+      "14\n",
+      "19\n",
+      "53\n",
+      "22\n",
+      "11\n",
+      "24\n",
+      "24\n",
+      "13\n",
+      "15\n",
+      "30\n",
+      "11\n",
+      "14\n",
+      "13\n"
      ]
     }
    ],
    "source": [
-    "min_nodes = 3\n",
+    "for n, d in map.nodes(data=True):\n",
+    "    print len(d['ls'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "min_nodes = 10\n",
     "\n",
     "##remove neurons with no assigned nodes\n",
     "for n, d in map.nodes(data=True):\n",
@@ -197,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -205,10 +202,10 @@
     {
      "data": {
       "text/plain": [
-       "33"
+       "13"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -229,7 +226,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "made directory uetz_communities_1.0_60\n",
+      "made directory uetz_communities_0.3_1\n",
       "written shortest path matrix\n",
       "written community_0.txt\n",
       "written community_1.txt\n",
@@ -243,27 +240,7 @@
       "written community_9.txt\n",
       "written community_10.txt\n",
       "written community_11.txt\n",
-      "written community_12.txt\n",
-      "written community_13.txt\n",
-      "written community_14.txt\n",
-      "written community_15.txt\n",
-      "written community_16.txt\n",
-      "written community_17.txt\n",
-      "written community_18.txt\n",
-      "written community_19.txt\n",
-      "written community_20.txt\n",
-      "written community_21.txt\n",
-      "written community_22.txt\n",
-      "written community_23.txt\n",
-      "written community_24.txt\n",
-      "written community_25.txt\n",
-      "written community_26.txt\n",
-      "written community_27.txt\n",
-      "written community_28.txt\n",
-      "written community_29.txt\n",
-      "written community_30.txt\n",
-      "written community_31.txt\n",
-      "written community_32.txt\n"
+      "written community_12.txt\n"
      ]
     }
    ],
