--- a/yeast.ipynb
+++ b/yeast.ipynb
@@ -393,7 +393,10 @@
       "Layer: 1, training epoch: 999/1000, size of map: 33, MQE: 1.19935316618, target: 0.813090429355          deleted node 7\n",
       "Layer: 1, training epoch: 999/1000, size of map: 33, MQE: 1.13869927102, target: 0.813090429355          deleted node 12\n",
       "Layer: 1, training epoch: 999/1000, size of map: 33, MQE: 1.16877488045, target: 0.813090429355          deleted node 32\n",
-      "Layer: 1, training epoch: 907/1000, size of map: 35, MQE: 1.09005201842, target: 0.813090429355          "
+      "Layer: 1, training epoch: 999/1000, size of map: 36, MQE: 1.07167132124, target: 0.813090429355          deleted node 21\n",
+      "Layer: 1, training epoch: 999/1000, size of map: 43, MQE: 1.00436436337, target: 0.813090429355          deleted node 5\n",
+      "Layer: 1, training epoch: 999/1000, size of map: 46, MQE: 0.903718992686, target: 0.813090429355          deleted node 30\n",
+      "Layer: 1, training epoch: 737/1000, size of map: 48, MQE: 0.864222291383, target: 0.813090429355          "
      ]
     }
    ],
@@ -416,6 +419,99 @@
     "root_dir = \"/home/david/Documents/ghsom\"\n",
     "\n",
     "data = \"yeast_uetz\"\n",
+    "init = 1\n",
+    "\n",
+    "for p in np.arange(0.1, 1, 0.1)[::-1]:\n",
+    "    \n",
+    "    print \"p={}\".format(p)\n",
+    "    \n",
+    "    os.chdir(root_dir)\n",
+    "    \n",
+    "    #ghsom parameters\n",
+    "    params = {'w': 0.0001,\n",
+    "             'eta': 0.001,\n",
+    "             'sigma': 1,\n",
+    "              'e_sg': p,\n",
+    "             'e_en': 10}\n",
+    "    \n",
+    "    map_file = '{}_communities_{}'.format(data, p, init)\n",
+    "    \n",
+    "    if not os.path.isfile(\"{}.pkl\".format(map_file)):\n",
+    "    \n",
+    "        #run ghsom and save output\n",
+    "        print \"running GHSOM and saving to {}\".format(map_file)\n",
+    "        G, map = ghsom_main(params, 'embedded_{}.gml'.format(data), init=init, lam=1000)\n",
+    "        print '\\nnumber of communities detected: {}, saved map to {}'.format(len(map), map_file)\n",
+    "        save_obj((G, map), map_file)\n",
+    "    \n",
+    "    else:\n",
+    "        \n",
+    "        print \"{} already exists, loading map\".format(map_file)    \n",
+    "        #load output\n",
+    "        load_obj(map_file)\n",
+    "\n",
+    "    #save results to file\n",
+    "    dir_name = \"{}_communities_{}_{}\".format(data, p, init)\n",
+    "    if os.path.isdir(dir_name):\n",
+    "        shutil.rmtree(dir_name)\n",
+    "        print \"deleted directory {}\".format(dir_name)\n",
+    "    \n",
+    "    os.mkdir(dir_name)\n",
+    "    print 'made directory {}'.format(dir_name)\n",
+    "\n",
+    "    os.chdir(dir_name)\n",
+    "    print \"moved to {}\".format(dir_name)\n",
+    "    \n",
+    "    #all genes\n",
+    "    all_genes_file = \"all_genes.txt\"\n",
+    "    with open(all_genes_file, 'w') as f:\n",
+    "        for n in G.nodes():\n",
+    "            f.write(\"{}\\n\".format(n))\n",
+    "    print \"written {}\".format(all_genes_file)\n",
+    "    \n",
+    "    #save shortest path matrix\n",
+    "    shortest_path = nx.floyd_warshall_numpy(map).astype(np.int)\n",
+    "    np.savetxt(\"shortest_path.csv\", shortest_path, fmt='%i', delimiter=\",\")\n",
+    "    print 'written shortest path matrix'\n",
+    "    \n",
+    "    #save communities to file\n",
+    "    c = 0\n",
+    "    for n, d in map.nodes(data=True):\n",
+    "        ls = d['ls']\n",
+    "        with open('community_{}.txt'.format(c),'w') as f:\n",
+    "            for l in ls:\n",
+    "                f.write('{}\\n'.format(l))\n",
+    "        print 'written community_{}.txt'.format(c)\n",
+    "        c += 1\n",
+    "    print"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import networkx as nx\n",
+    "import numpy as np\n",
+    "from spearmint_ghsom import main_no_labels as ghsom_main\n",
+    "import pickle\n",
+    "import shutil\n",
+    "\n",
+    "def save_obj(obj, name):\n",
+    "    with open(name + '.pkl', 'wb') as f:\n",
+    "        pickle.dump(obj, f, pickle.HIGHEST_PROTOCOL)\n",
+    "\n",
+    "def load_obj(name):\n",
+    "    with open(name + '.pkl', 'rb') as f:\n",
+    "        return pickle.load(f)\n",
+    "    \n",
+    "root_dir = \"/home/david/Documents/ghsom\"\n",
+    "\n",
+    "data = \"yeast_union\"\n",
     "init = 1\n",
     "\n",
     "for p in np.arange(0.1, 1, 0.1)[::-1]:\n",
